[package]
name = "halo2-circuit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "develop" }
plotters = "0.3"
group = "0.13.0"
[features]
dev-graph = ["halo2_proofs/dev-graph"]